# idi-cpp-template

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  JenkinsfileTemplate  LICENSE  README.md  TEMPLATE_LICENSE  cmake-variants.yaml  config.cmake  idi_version.h  platform-compile-options.cmake  platform-config.cmake  platform-config.exe.cmake  platform-config.shared.cmake  platform-config.static.cmake  platform-options.cmake  platform_config.cmake  platform_config.shared.cmake  platform_config.static.cmake  version.cmake
.github/workflows/: cpp.yml
cmake/: build_info.cmake  component.cmake  framework.cmake  git.cmake  idi-template.cmake  new_component.cmake  version.cmake
cmake-hooks/: README.md  post-component.cmake  post-components-list.cmake  post-options.cmake  post-platform-config.cmake  post-source.cmake  post-target-compile-options.cmake  pre-component.cmake  pre-components-list.cmake  pre-configure.cmake  pre-init.cmake  pre-options.cmake  pre-source.cmake  pre-target-compile-options.cmake
cmake/configure_templates/: platform_config.h.in
cmake/functions/: idi_component.cmake
cmake/functions/framework/: idi_configure_common_includes.cmake  idi_init.cmake  idi_new_component.cmake
cmake/idi/: idi-template.cmake  version.cmake
cmake/idi/functions/: idi_add_custom_build_type.cmake  idi_add_dependency.cmake  idi_add_sources.cmake  idi_add_subdirectory.cmake  idi_code_coverage.cmake  idi_component.cmake  idi_component_test.cmake  idi_configure_file.cmake  idi_demo.cmake  idi_platform_config.cmake  idi_target_compile_settings.cmake  misc.cmake
cmake/idi/functions/framework/: idi_configure_base_includes.cmake  idi_configure_common_includes.cmake  idi_custom_build_types.cmake  idi_init.cmake  idi_load_platform_config.cmake  idi_main.cmake  idi_new_component.cmake  idi_src.cmake
cmake/idi/functions/framework/build-types/: idi_clang_tidy.cmake
cmake/idi/scripts/: build-info.cmake
cmake/idi/templates/template_component/: CMakeLists.txt  __idi__component.cpp  objects.cmake
cmake/idi/templates/template_component/include/: __idi__component.hpp  include.cmake
cmake/idi/templates/template_component/include/public/: __idi__component_public.h  public.cmake
cmake/idi/templates/template_component/tests/: test.cpp  test_public.cpp  tests.cmake
cmake/idi/updater/: updater.cmake  updater_imp.cmake  updater_version.cmake
cmake/templates/template_component/: CMakeLists.txt  __idi__component.cpp  objects.cmake
cmake/templates/template_component/include/: __idi__component.hpp
cmake/templates/template_component/include/public/: __idi__component_public.h  public.cmake
cmake/templates/template_component/tests/: tests.cmake
demo/: CMakeLists.txt
lib/: .clang-tidy  .gitignore  README.md  libraries.cmake
src/: CMakeLists.txt  components.cmake
src/app/: CMakeLists.txt  README.md  components.cmake
src/app/common/: CMakeLists.txt  objects.cmake  version.cpp
src/app/common/include/: __app_version.h  app_version.h  include.cmake  version.cmake
src/app/common/include/public/: export.h  public.cmake  version.h
src/app/common/tests/: test.cpp  tests.cmake
src/app/main/: CMakeLists.txt  main.cpp
src/app/main/tests/: dll_test.cpp  tests.cmake
src/app/template_component/: CMakeLists.txt  template_component.cpp
src/app/template_component/include/: include.cmake  template_component.h
src/app/template_component/include/public/: public_template_component.h
src/app/template_component/tests/: test.cpp  test_public.cpp  tests.cmake
src/base/: CMakeLists.txt  README.md  objects.cmake  version.cpp
src/base/include/template_project/: __version.hpp  include.cmake  version.hpp
src/base/include/template_project/public/: __build_info.h  __export.h  __idi_version.h  __platform_config.h  __version.h  export.h  idi_version.h  platform_config.h  public.cmake  version.h
src/base/tests/: test.cpp  test_public.cpp  tests.cmake
src/common/: CMakeLists.txt  objects.cmake  version.cpp
src/common/include/: __app_version.h  __version.hpp  __version.out.hpp  app_version.h  include.cmake  version.hpp
src/common/include/public/: __build_info.h  __export.h  __platform_config.h  __version.h  export.h  idi_version.h  public.cmake  version.h
src/common/include/template_project/: __version.hpp  include.cmake  version.hpp
src/common/include/template_project/public/: __build_info.h  __export.h  __platform_config.h  __version.h  export.h  idi_version.h  platform_config.h  public.cmake  version.h
src/common/tests/: test.cpp  test_public.cpp  tests.cmake
src/configure_templates/: platform_config.h.in
src/configure_templates/template_component/: CMakeLists.txt  __idi__component.cpp  objects.cmake
src/configure_templates/template_component/include/: include.cmake
src/configure_templates/template_component/include/public/: public.cmake
src/configure_templates/template_component/tests/: test.cpp  test_public.cpp
src/lib/: README.md
src/main/: CMakeLists.txt  dll_main.cpp  main.cpp  objects.cmake
src/main/tests/: dll_test.cpp  tests.cmake
src/unit_test_component/: CMakeLists.txt  objects.cmake  unit_test_component.cpp
src/unit_test_component/include/: include.cmake  unit_test_component.h
src/unit_test_component/include/public/: public.cmake  unit_test_component_public.h
src/unit_test_component/tests/: test.cpp  test_public.cpp  tests.cmake
templates/: platform_config.in.h
templates/template_component/: CMakeLists.txt  __idi__component.cpp  objects.cmake
templates/template_component/include/: __idi__component.h  __idi__component.hpp  include.cmake
templates/template_component/include/public/: __idi__component_public.h  public.cmake
templates/template_component/tests/: test.cpp  test_public.cpp  tests.cmake
